# dogs-pfsp

./: .gitignore  Cargo.toml  README.md  profile_flowtime.sh  run_taillard_makespan.sh  run_vfr_makespan.sh
experiments/: experiments.py  f_flowtime_alpha.csv  flowtime.experiment.json  flowtime_taillard_ARPD.csv  flowtime_taillard_reference.csv  flowtime_taillard_tmp_arpd.csv  forward_makespan_taillard.experiment.json  forward_makespan_vfr.experiment.json  lscpu.txt  run_flowtime_ibs_taillard.py  run_igbob_taillard.py  run_igbob_vrf.py  run_makespan_ibs_taillard.py  run_makespan_ibs_vrf.py  run_makespan_ibs_vrf2.py  taillard_makespan.experiment.json  taillard_makespan_ARPD.csv  vfr_large_ARPD.csv  vfr_large_makespan.experiment.json  vfr_large_primal.csv
experiments/EXPERIMENTS_IBS_VFR/: IBS_VFR_bi_min_alpha_100_20_1.perfprofile.json  IBS_VFR_bi_min_alpha_100_20_1.sol.txt  IBS_VFR_bi_min_alpha_100_20_1.stats.json  IBS_VFR_bi_min_alpha_100_20_10.perfprofile.json  IBS_VFR_bi_min_alpha_100_20_10.sol.txt  IBS_VFR_bi_min_alpha_100_20_10.stats.json  (+9218 more)
igbob/: Makefile  igbob.c
insts/: list_taillard_insts.csv  taillard_flowtime.csv  taillard_makespan.csv  taillard_makespan_test.csv  test_taillard.csv  vfr_large_makespan.csv
scripts/: compare_perf_flow.py  compare_perf_makespan.py  extract_igbob_tai.py  extract_igbob_vfr.py  extract_igirms_arpd_ref.py  flow_arpd_ref.py  flow_pareto.py  flowtime_taillard_bks.csv  gen_bks_tabs_flow.py  gen_tai_flow_bestresults_col.py  gen_vfr_bestresults_col.py  generate_bks_tabs_vfr.py  generate_tai_pareto.py  generated_best_vfr.csv  get_first_obj.py  helper_stats.py  ibs_comparison.py  tai_makespan_arpd_ref.py  vbih_extract_sols.py  vfr_arpd_ref.py  vfr_pareto.py
src/: fbmakespan.rs  fbsearch.rs  fflowtime.rs  lib.rs  main.rs  main_args.yml  nehhelper.rs  nehmakespan.rs  pfsp.rs
tmp/: README.md
(+22787 files in other folders)
