[package]
name = "dogs-pfsp"
version = "0.1.0"
authors = ["Luc Libralesso <libralesso.l@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dogs = "1.0.0"
bit-set = "0.5.2"
structopt = { version = "0.3", default-features = false }
ordered-float = "2.0.0"


[profile.release]
# debug = true # to be removed eventually