[package]
name = "dogs-pfsp"
version = "1.0.0"
authors = ["Luc Libralesso <libralesso.l@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dogs = "1.0.0"
dogs = { path = "../dogs" }
clap = "~2.27.0"
bit-set = "0.5.2"
ordered-float = "2.0.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"

[profile.release]
debug = true # to be removed eventually